--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-Flask==2.3.3
-Flask-Login==0.6.2
-Flask-SQLAlchemy==3.0.5
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
+Flask-Migrate==4.0.5
+Flask-WTF==1.2.1
+PyMySQL==1.1.0
+SQLAlchemy==2.0.23
+gate-api==4.5.0
+schedule==1.2.1
+pywin32==306; platform_system == "Windows"
 python-dotenv==1.0.0
 requests==2.31.0
-Werkzeug==2.3.7
-Flask-Migrate==4.0.5
-Flask-WTF==1.1.1
-bcrypt==4.0.1
-PyJWT==2.8.0
-PyMySQL==1.1.0
-cryptography==41.0.1 
+pytz==2023.3.post1
+python-dateutil==2.8.2 
